tests/machine/x/go/group_by_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_join.go:63:23: invalid operation: o (variable of struct type OrdersItem) is not an interface
../../../tests/machine/x/go/group_by_join.go:67:23: invalid operation: c (variable of struct type CustomersItem) is not an interface

1: //go:build ignore
